fixing spacing and title

--- a/css/front.css
+++ b/css/front.css
@@ -59,6 +59,8 @@ h3 {
     max-width: 30em;
     width:100%;
     text-align: left;
+    padding-bottom: 80px;
+    padding-top: 10px;
 }
 .content {
     text-align: center;
